syntax = "proto3";

import "./payment/message.proto";
import "./task/message.proto";

message EffectError {
  uint32 timestamp = 1;
  string message = 2;
  string code = 3;
}

message EffectAcknowledgment {
  uint32 timestamp = 1;
}

message EffectIdentifyRequest {
  uint32 timestamp = 1;
}

message EffectIdentifyResponse {
optional string name = 1;
  string version = 2;
  string pubkey = 3;
  uint32 batch_size = 4;
  uint32 task_timeout = 5;
  bool requires_access_code = 6;
}

message RequestToWork {
  uint32 timestamp = 1;
  string recipient = 2;
  uint64 nonce = 3;
  optional string access_code = 4;
}

message EffectProtocolMessage {
  oneof message {
    Task task = 1;
    TaskAccepted task_accepted = 2;
    TaskRejected task_rejected = 3;
    TaskCompleted task_completed = 4;
    Payment payment = 5;
    PayoutRequest payout_request = 6;
    ProofRequest proof_request = 7;
    ProofResponse proof_response = 8;
    TemplateRequest template_request = 9;
    Template template_response = 10;
    EffectError error = 11;
    EffectAcknowledgment ack = 12;
    RequestToWork request_to_work = 13;
    EffectIdentifyRequest identify_request = 14;
    EffectIdentifyResponse identify_response = 15;
  }
}
